# VitaMetron

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  atlas.hcl  docker-compose.gpu.yml  docker-compose.yml  init-secrets.sh
ml/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
ml/app/: config.py  database.py  main.py  retrain.py  scheduler.py
ml/app/features/: anomaly_features.py  anomaly_quality.py  circadian.py  circadian_batch.py  day_boundary.py  divergence_features.py  hrv_features.py  pca_reducer.py  pipeline.py  quality.py  sri.py  vri_batch.py  zscore.py
ml/app/models/: anomaly_detector.py  anomaly_explainer.py  circadian_scorer.py  condition_scorer.py  divergence_detector.py  (+6 more)
ml/tests/: conftest.py  test_advice_prompt.py  test_advice_router.py  test_anomaly_detector.py  test_anomaly_explainer.py  test_anomaly_features.py  test_anomaly_quality.py  test_anomaly_router.py  test_circadian.py  test_condition_scorer.py  test_day_boundary.py  test_divergence_detector.py  test_divergence_features.py  test_divergence_router.py  test_ensemble_hrv.py  test_health.py  test_hrv_features.py  test_hrv_predictor.py  test_hrv_router.py  test_lstm_predictor.py  test_pca_reducer.py  test_predict.py  test_quality.py  test_retrain.py  test_retrain_router.py  test_risk.py  test_risk_detector.py  test_scheduler.py  test_sri.py  test_training_checks.py  test_validation.py  test_validation_lstm.py  test_vri_scorer.py  test_zscore.py
preprocessor/: Dockerfile  pyproject.toml
preprocessor/app/: config.py  main.py
preprocessor/tests/: test_normalizer.py
(+282 files in other folders)
